0025383: Broken vrecord command

Pass HWND of the current 3D view to OpenGl_AVIWriter::StartRecording()
in order to make it work.